src/grammar.txt

/* some ideas */

/*
Parse ::= DeclFunc+ 'EOF'
Op ::= CallFunc ';' | Assign ';' | Return ';' | Pass ';' | Break ';' | Continue ';' | If | While | Asm ';' | '{' Op+ '}'

DeclFunc ::= 'func' '.' '(' {Var ','}* ')' Op
CallFunc ::= . '(' {OrExpr','}* ')'

Return ::= 'return' OrExpr
Pass ::= 'pass'
Break ::= 'break'
Continue ::= 'continue'
If ::= 'if' '(' OrExpr ')' Op {'else' Op}
While ::= 'while' '(' OrExpr ')' Op {'else' Op}
	while-else still is not implemented
//For ::= Var '~' ['[''('] Var | Num [']'')'] Op {'else' Op}
Asm ::= 'asm' '(' '"'.'"' ')'

Assign ::= VarExpr '=' OrExpr

OrExpr ::= AndExpr{['or']AndExpr}*
AndExpr ::= CompExpr{['and']CompExpr}*
CompExpr ::= Expr{['<''>''==']Expr}
Expr ::= Temp{['+''-']Temp}*
Temp ::= Prim{['*''/']Prim}*
Prim ::= '(' OrExpr ')' | CallFunc | Num | VarExpr | Literal

VarExpr ::= Varadr | deref | Var

Varadr ::= '&' Var
Deref ::= '[' OrExpr ']'

Num ::= ['0'-'9']+
Var ::= ['A'-'Z', 'a'-'z', '0'-'9', '_']+
*/

/*
while(...)
{

} else
{

}

for i ~ (1, 10]
{

}

do
{

} while(...)

do
{

} for i ~ [0, 10)

asm("mov rax, rbx");

*/
